package cn.tunyl.creational.builder;

public class MobikeBuilder extends Builder{
    @Override
    public void buildFrame() {
        bike.setFrame("铝合金车架");
    }

    @Override
    public void buildSeat() {
        bike.setSeat("真皮车座");

    }

    @Override
    public Bike createBike() {
        return bike;
    }
}
